# icon_generator

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/api/v1/: analysis.py  figma.py  generation.py
backend/app/core/: config.py
backend/app/models/: __init__.py
backend/app/schemas/: figma.py  generation.py  style_profile.py
backend/app/services/: icon_generation.py  style_analysis.py
backend/app/worker/: __init__.py  celery_app.py
backend/iconforge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py  test_style_analysis_api.py
docs/: monetization_model.md
frontend/: .eslintrc.json  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/analysis/: page.tsx
frontend/src/app/(dashboard)/generate/: page.tsx
frontend/src/app/(dashboard)/results/: page.tsx
frontend/src/app/docs/prd/: page.tsx
frontend/src/components/analysis/: style-preview-icons.tsx  style-profile-preview.tsx  style-upload-dropzone.tsx  uploaded-icons-gallery.tsx
frontend/src/lib/: api.ts
frontend/src/lib/services/: style-analysis.ts
frontend/src/store/: style-profile-store.ts
frontend/src/styles/: globals.css
