[project]
name = "iconforge-backend"
version = "0.1.0"
description = "FastAPI backend for the IconForge MVP"
authors = [{ name = "IconForge Team" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "celery>=5.4.0",
  "redis>=5.1.1",
  "boto3>=1.35.36",
  "python-multipart>=0.0.9",
  "httpx>=0.27.2",
  "orjson>=3.10.7",
  "pillow>=10.4.0",
  "numpy>=1.26.4",
  "opencv-python-headless>=4.10.0.84",
  "scikit-image>=0.24.0",
  "scikit-learn>=1.5.2"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8"
]
dev = [
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "types-redis>=4.6.0.20240903",
  "types-requests>=2.32.0.20240907"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
